--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="Logo.jpeg">
+    <link rel="icon" href="logo.jpg">
 </head>
 
 <body>
