fixed logo should be showing up now

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="base">
 
         <div class="firstFoot">
-            <div class="logo"><a href="index.html"><img src="Logo.jpeg"></a></div>
+            <div class="logo"><a href="index.html"><img src="logo.jpg"></a></div>
 
             <aside class="right">
                 <label class="hamburger-menu">
