Updated according to what is pointd

--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
         <div class="firstFoot">
             <div class="logo"><a href="index.html"><img src="logo.jpg"></a></div>
 
-            <aside class="right">
+<!--             <aside class="right">
                 <label class="hamburger-menu">
-                    <input type="checkbox"></label>
+                    <input type="checkbox"></label> -->
 
-                <aside class="sidebar">
+<!--                 <aside class="sidebar">
 
-                    <nav>
+                    <nav> -->
                         <div class="navigationBar">
                             <div class="one"><a href="#uno">
                                     <p>Home</p>
@@ -39,18 +39,18 @@
                                     <p>Contacts</p>
                                 </a></div>
                         </div>
-                    </nav>
+<!--                     </nav>
 
                 </aside>
             </aside>
-
+ -->
         </div>
 
         <div class="secondFoot">
 
             <section id="uno">
                 <div class="contents">
-                    <div class="profilePicture"><img class="pict" src="pict.jpeg"></div>
+                    <div class="profilePicture"><img class="pict" src="pict.png"></div>
                     <div class="details">
                         <p>This serves as my professional portfolio website, providing a comprehensive display of my
                             work
