--- a/index.html
+++ b/index.html
@@ -15,31 +15,31 @@
         <div class="firstFoot">
             <div class="logo"><a href="index.html"><img src="logo.jpg"></a></div>
 
-<!--             <aside class="right">
+            <!--             <aside class="right">
                 <label class="hamburger-menu">
                     <input type="checkbox"></label> -->
 
-<!--                 <aside class="sidebar">
+            <!--                 <aside class="sidebar">
 
                     <nav> -->
-                        <div class="navigationBar">
-                            <div class="one"><a href="#uno">
-                                    <p>Home</p>
-                                </a></div>
-                            <div class="two"><a href="#dos">
-                                    <p>About</p>
-                                </a></div>
-                            <div class="three"><a href="#tres">
-                                    <p>Service</p>
-                                </a></div>
-                            <div class="four"><a href="#quatro">
-                                    <p>Projects</p>
-                                </a></div>
-                            <div class="fifth"><a href="#cinco">
-                                    <p>Contacts</p>
-                                </a></div>
-                        </div>
-<!--                     </nav>
+            <div class="navigationBar">
+                <div class="one"><a href="#uno">
+                        <p>Home</p>
+                    </a></div>
+                <div class="two"><a href="#dos">
+                        <p>About</p>
+                    </a></div>
+                <div class="three"><a href="#tres">
+                        <p>Service</p>
+                    </a></div>
+                <div class="four"><a href="#quatro">
+                        <p>Projects</p>
+                    </a></div>
+                <div class="fifth"><a href="#cinco">
+                        <p>Contacts</p>
+                    </a></div>
+            </div>
+            <!--                     </nav>
 
                 </aside>
             </aside>
@@ -83,19 +83,22 @@
                         <li>Cybersecurity</li>
                     </ul>
                 </div>
-
             </section>
 
             <section id="quatro">
                 <div class="projects">
-                    <p>My projects during studies</p>
-                    <table>
-                        <tr>
-                            <th><img class="projectFirst" src="project1.png"></th>
-                            <th><img class="projectSecond" src="project2.png"></th>
-                            <th><img class="projectThird" src="project3.png"></th>
-                        </tr>
-                    </table>
+                    <div class="insides">
+                        <div>
+                            <p>My projects during studies</p>
+                        </div>
+                        <div class="order">
+                            <div><img class="projectFirst" src="project1.png"></div>
+                            <div> <img class="projectSecond" src="project2.png"></div>
+                            <div>
+                                <img class="projectThird" src="project3.png">
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </section>
 
