--- a/index.html
+++ b/index.html
@@ -104,9 +104,12 @@
 
             <section id="cinco">
                 <div class="contacts">
-                    <p>My contacts:</p>
+                    <div class="p">
+                        <p>My contacts:</p>
+                    </div>
+
                     <div class="container">
-                        <div><img src="gmail.png"></div>
+                        <div><img src="email.png"></div>
                         <div>
                             <a class="coms" href="mailto:markbacocanag@gmail.com">
                                 <p>markbacocanag@gmail.com</p>
@@ -124,7 +127,7 @@
                                 <p>//www.facebook.com/Walawalaoiii/</p>
                             </a>
                         </div>
-                        <div><img src="phone.png"></div>
+                        <div><img src="phone-call.png"></div>
                         <div>
                             <a class="coms" href="tel:#09608598341">
                                 <p>#09608598341</p>
