--- a/index.html
+++ b/index.html
@@ -139,7 +139,11 @@
 
         </div>
     </div>
-
+    <div class="cpyrights">
+        <footer>
+            <p>Copyright © 2023 UC-Project</p>
+        </footer>
+    </div>
 </body>
 
 </html>
