--- a/index.html
+++ b/index.html
@@ -50,7 +50,14 @@
 
             <section id="uno">
                 <div class="contents">
-                    <div class="profilePicture"><img class="pict" src="pict.png"></div>
+                    <article class="card">
+                        <div class="profilePicture"><img class="pict" src="pict.png"></div>
+                        <span class="top"></span>
+                        <span class="right"></span>
+                        <span class="bottom"></span>
+                        <span class="left"></span>
+                      </article>
+
                     <div class="details">
                         <p>This serves as my professional portfolio website, providing a comprehensive display of my
                             work
