--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                         <span class="right"></span>
                         <span class="bottom"></span>
                         <span class="left"></span>
-                      </article>
+                    </article>
 
                     <div class="details">
                         <p>This serves as my professional portfolio website, providing a comprehensive display of my
@@ -116,35 +116,43 @@
                     </div>
 
                     <div class="container">
-                        <div><img src="email.png"></div>
-                        <div>
-                            <a class="coms" href="mailto:markbacocanag@gmail.com">
-                                <p>markbacocanag@gmail.com</p>
-                            </a>
+                        <div class="imgs">
+                            <div><img src="email.png"></div>
+                            <div><img src="instagram.png"></div>
+                            <div><img src="facebook.png"></div>
+                            <div><img src="phone-call.png"></div>
                         </div>
-                        <div><img src="instagram.png"></div>
-                        <div>
-                            <a class="coms" href="https://www.instagram.com/cchipys/">
-                                <p>https://www.instagram.com/cchipys/</p>
-                            </a>
-                        </div>
-                        <div><img src="facebook.png"></div>
-                        <div>
-                            <a class="coms" href="//www.facebook.com/Walawalaoiii/">
-                                <p>//www.facebook.com/Walawalaoiii/</p>
-                            </a>
-                        </div>
-                        <div><img src="phone-call.png"></div>
-                        <div>
-                            <a class="coms" href="tel:#09608598341">
-                                <p>#09608598341</p>
-                            </a>
+                        <div class="links">
+                            <div>
+                                <a class="coms" href="mailto:markbacocanag@gmail.com">
+                                    <p>markbacocanag@gmail.com</p>
+                                </a>
+                            </div>
+
+                            <div>
+                                <a class="coms" href="https://www.instagram.com/cchipys/">
+                                    <p>https://www.instagram.com/cchipys/</p>
+                                </a>
+                            </div>
+
+                            <div>
+                                <a class="coms" href="//www.facebook.com/Walawalaoiii/">
+                                    <p>//www.facebook.com/Walawalaoiii/</p>
+                                </a>
+                            </div>
+
+                            <div>
+                                <a class="coms" href="tel:#09608598341">
+                                    <p>#09608598341</p>
+                                </a>
+                            </div>
                         </div>
                     </div>
                 </div>
-            </section>
-
         </div>
+        </section>
+
+    </div>
     </div>
     <div class="cpyrights">
         <footer>
