--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <section id="uno">
                 <div class="contents">
                     <article class="card">
-                        <div class="profilePicture"><img class="pict" src="pict.png"></div>
+                        <div class="profilePicture"><img class="pict" src="college.jpg"></div>
                         <span class="top"></span>
                         <span class="right"></span>
                         <span class="bottom"></span>
